Fix background for dropdown on small screens

--- a/app/assets/stylesheets/modules/record-toolbar.scss
+++ b/app/assets/stylesheets/modules/record-toolbar.scss
@@ -86,10 +86,17 @@ div.record-toolbar > div > div > ul > li:nth-child(3) > form > div > label {
       overflow-x: hidden;
     }
 
-    .navbar-nav .open .dropdown-menu > .dropdown-item {
-      color: $white;
-      &:hover, &:focus {
-        text-decoration: underline;
+    .navbar-nav .show .dropdown-menu {
+      background-color: $legacy-toolbar;
+      border: none;
+
+      .dropdown-item {
+        color: $white;
+
+        &:hover, &:focus {
+          text-decoration: underline;
+          background-color: transparent;
+        }
       }
     }
 
